--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="body bg-secondary">
 
     <div class="container">
         <div class="row">
@@ -85,17 +85,17 @@
     </div>
 
     <template id="movies-template">
-        <li class="movies-template__item col-4 mt-2">
+        <li class="movies-template__item col-4 mt-2 p-3">
 
             <img class="card-img-top" style="width: 350px; height: 350px;"
                 src="https://m.media-amazon.com/images/M/MV5BNDg1NTU2OWEtM2UzYi00ZWRmLWEwMTktZWNjYWQ1NWM1OThjXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg"
                 alt="...">
             <div class="card-body">
-                <h5 class="card-title movie-title h3"></h5>
-                <p class="card-text movie-year">
+                <h5 class="card-title movie-title h3 fs-3 text-dark fw-bold"></h5>
+                <p class="card-text movie-year mt-2 fw-bold">
                     <i></i>
                 </p>
-                <p class="card-text movie-type"></p>
+                <p class="card-text movie-type fw-bold"></p>
             </div>
 
         </li>
